updated at: 2023-07-31 22:21, 3Dモデル カメラ - うぃんたーのおみせ - BOOTH

--- a/VRChat/47/1338947.html
+++ b/VRChat/47/1338947.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "86KsiYnI33huS+4wJrsZz7hj1I75VLT+IAOYrLdR6yY="></script>
+    "wOwKLcsS09bPQHrr1991ZfLhfguPi8JLfaZBPgSlBlc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル カメラ","description":"カメラ　3Dモデル 紹介文\n\nダウンロードできるファイル形式は.unitypackageです。\n撮影機能などはありません。\n一応上部及び、紐あたりにボーンが入っているので、ダイナミックボーンなどで揺らそうと思えば揺れます。\n\nテクスチャを適用しなくても色ごとにマテリアルが違うので、単色マテリアルを当てても大丈夫です。改変（色変え）したいけどめんどくさい！という場合はそちらでもどうぞ。（画像4枚目のようになります）\n\n2020/4/11\n本体カラー用に白黒のテクスチャ追加\nちょっと更新\n\n\n私的利用に対してご自由にお使いください\n大々的な再配布はお止めください\n\n問題などはTwitterに\n@w_i_n_t_e_r_","url":"https://booth.pm/ja/items/1338947","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/e744eeac-3eef-408c-8011-89c5b4908b13/i/1338947/8c101099-8da1-46b0-bdab-6e361ad6cdd5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="86KsiYnI33huS+4wJrsZz7hj1I75VLT+IAOYrLdR6yY="></script>
+    nonce="wOwKLcsS09bPQHrr1991ZfLhfguPi8JLfaZBPgSlBlc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -559,9 +559,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
