--- a/VRChat/69/1338769.html
+++ b/VRChat/69/1338769.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nkpFp60GJg5JywQb6g8ahT3MRFpzRSCJH1TMD9ccI4s="></script>
+    "QEvs22FQDpbwcIi3+KpBSg/iuKggFzYcvchYh60Tagc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　箱中華　「オイスターペイル」","description":"オイスターペイル\n\n箱中華です。Very RelievedなChinese foodです。\nワールドの置物、アバターへの小道具等に使ってください。\n\n同梱内容\n\n・unitypackage\n・FBX\n・Texture\n・readme.txt\n\n\nTextureフォルダに.psdファイルがあります。\n\n\nポリゴン数1852\n\nマテリアル数5\n\narktoon-shaders-1.0.2.4を使用させて貰っています。\n\n\n　利用規約\n\n対象コンテンツの利用権利の販売となります。\nコンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n\n ・他人が利用できるようにし、著作者の販売を阻害すること。\n\n　・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n　\n ・利用権利は他人に譲渡することができません。\n\nその他\n\n ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n\n\nこのライセンスにおける解説情報は下記になります。\n\n\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n\n（タオルライセンス 販売用 version0.9）\n\n　　　　\nシェーダーとしてArktoon-Shadersを使用させて貰っています。\n\n　　　　Arktoon-Shaders\n\tsynqark 様【https://booth.pm/ja/items/1027997】\n\n","url":"https://booth.pm/ja/items/1338769","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/59f43df1-17f0-49b3-ad41-47c8b0d2ce1f/i/1338769/e276e6e8-d31b-40a8-aab0-27ede229b5b3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nkpFp60GJg5JywQb6g8ahT3MRFpzRSCJH1TMD9ccI4s="></script>
+    nonce="QEvs22FQDpbwcIi3+KpBSg/iuKggFzYcvchYh60Tagc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
