--- a/VRChat/53/1338553.html
+++ b/VRChat/53/1338553.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Fw8OGi6Doyau6Jn29/Q6GDqUUQ+zJJmm+krTJ2G0iNU="></script>
+    "ARmkSU9mOsxFoKKFzRKHblr32XH2UMhDcvVrqSIEU8Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『そあら』","description":"チャイナ風味のVRchat向けアバターです。\n無料配布です。アバターはCC0ですので、改変、再配布、商用利用、その他ご自由にご利用ください。\n（同梱のArktoon-Shadersはそちらの利用規約に従ってください）","url":"https://booth.pm/ja/items/1338553","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1338553/d1b10ea3-96a7-4620-af65-8fbbe297768d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Fw8OGi6Doyau6Jn29/Q6GDqUUQ+zJJmm+krTJ2G0iNU="></script>
+    nonce="ARmkSU9mOsxFoKKFzRKHblr32XH2UMhDcvVrqSIEU8Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -464,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
