--- a/VRChat/58/1338058.html
+++ b/VRChat/58/1338058.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eyDyeVBUoqUSyc6/CYBITMdiTfBiaD5HCIaithCeF68="></script>
+    "Ij0Q7cIASyqds4QWXm9eV3n+7fQJbdcL3zRKd6eHQkI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Vroid】カジュアルなイチゴTシャツセット","description":"内容\n・フリー…簡易版白Tシャツ1着\n・Tシャツセット…イチゴ柄のTシャツ2着（白、黒）\n・パンツセット…ハーフパンツ2着（黒、赤）\n・ブーツ…ショートブーツ1足（黒に赤いリボン）\n・スペシャルセット…上記すべてに加えレモン柄の白Tシャツ1着、黄色のショートパンツ1着つき\n\n見本はこちら\nhttps://hub.vroid.com/characters/3090908678367339307/models/178635937322867930\n\n購入前に利用規約をお読みください\n\nhttps://arinpv0v0.wixsite.com/makevroid/about","url":"https://booth.pm/ja/items/1338058","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1100"},"image":"https://booth.pximg.net/c/620x620/a52bc9c8-f676-4539-98be-e65fe87af193/i/1338058/66ad5500-4bfb-4120-9130-1c0a816da4ca_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eyDyeVBUoqUSyc6/CYBITMdiTfBiaD5HCIaithCeF68="></script>
+    nonce="Ij0Q7cIASyqds4QWXm9eV3n+7fQJbdcL3zRKd6eHQkI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -801,9 +801,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
