--- a/VRChat/24/1336924.html
+++ b/VRChat/24/1336924.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pD+fsTNS2v1rdwPzj4md9uTznDNMdmcD04i77+SSyzM="></script>
+    "A/exoedzjbYkrRXfIt7KsfiaU2M3f1Sc/UhQiXVq6FA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル 小鈴Ver1.2","description":"\n軽率にスキ押せ～！！！！\n\n製作者：NIBOSI \n\nVRChat対応3Dモデルです。\nOqurusQuest対応！\nフルトラ対応！！\n\n※更新20.03.26　Ver.1.2\n　・顔,袖のメッシュ修正\n　・指のｱﾆﾒｰｼｮﾝ修正\n\n※更新19.07.22　Ver1.1\n  ・Unity package内のｱﾆﾒｰｼｮﾝが含まれていなかったので追加しました。\n　・オブジェクトを統合しました。\n　・シェーダをVRchat/Mobile/Toon Litに変更しました。\n\n \n\n仕様\n ・ポリゴン数：3994ポリゴン\n ・テクスチャ1枚\n ・マテリアル1個\n ・リップシンク15種類\n ・表情アニメーション6種類\n ・自動まばたき\n\n セット内容\n ・Unity package\n ・モデルfbxデータ\n ・Textureファイル\n 　　ﾃｸｽﾁｬ　1枚 　　\n　　 UV展開配置図　1枚\n ・利用規約\n\n\n\n\n 利用規約\n 1.本モデルの著作権は製作者に帰属します。\n 2.改変前また改変後の本モデルの再配布を禁止します。\n 3.本モデルを使用した一切の損害について製作者は責任を負いません。\n 4.モデルの政治利用・差別的・侮辱的利用を禁止します。\n ※購入した時点で本利用規約に同意したものとします。\n ※利用規約が変更した場合は、最新物が適用されます。\n\n 連絡先 \ntwitter：@hutabosi777 ","url":"https://booth.pm/ja/items/1336924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/f03af7d7-31bf-49c1-b051-6718e95e41e0/i/1336924/0ec052a4-9bcd-440e-b278-8b5d31f95755_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pD+fsTNS2v1rdwPzj4md9uTznDNMdmcD04i77+SSyzM="></script>
+    nonce="A/exoedzjbYkrRXfIt7KsfiaU2M3f1Sc/UhQiXVq6FA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
