--- a/VRChat/82/1383882.html
+++ b/VRChat/82/1383882.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "gyLQ/wRpQL5urr2p4SsmFxW52Ic4AvJk/H9G2mXQk64="></script>
+    "fVj/Jp+KizhAzhw7BTCuchzS2mIsPK0oSARl+w+8bB4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】VRChat向けアクセサリー【ピアス】","description":"宝石の色は一つ一つ変えられるので自分のイメージカラーにしても面白いかもしれません。\n聞きたいことなどございましたら\ntwitterアカウント：＠meiro0522\nDiscord：Meiro0522#8231にご連絡ください\n本モデルの著作権はMeiro0522に帰属します。\n特に利用に関する制限などはありませんが詳しくはreadme\nに書いてあります。\n","url":"https://booth.pm/ja/items/1383882","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ee347e86-b960-4000-abd0-d542ef4c4dcb/i/1383882/d196d2f1-67a1-404d-af8a-02e0e4249335_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gyLQ/wRpQL5urr2p4SsmFxW52Ic4AvJk/H9G2mXQk64="></script>
+    nonce="fVj/Jp+KizhAzhw7BTCuchzS2mIsPK0oSARl+w+8bB4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -457,9 +457,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
