--- a/VRChat/76/1382276.html
+++ b/VRChat/76/1382276.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NYYFIUJ0B3zuuVJHo2LqpAosvpLbXK5Q5CQ8fgcXMeo="></script>
+    "1LXBrsUx/dlSolBZ+AaBZMRUNKf8W9wMrw3eqtYsbBY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【キッシュ・ミーシェ調整済み】制服（夏）","description":"制服上下と靴のセットです。\n※長袖を追加しました\n\nシェイプキーで胸を大きくできます。\n\nこの商品にミーシェ、キッシュ用素体・本体は含まれていません。\n\n\nむた様のキッシュ用素体に合わせて制作しました。\nキッシュ用素体を使用しているアバターなら調整無しで実装できます。\nぽんでろ様のミーシェにも調整無しで実装できます。\n\nキッシュ用素体\nhttps://booth.pm/ja/items/1026956\n\nオリジナル３Dモデル「ミーシェ」\nhttps://booth.pm/ja/items/1256087\n\n\nizm様のVRChat向けUnity着替え補助スクリプトを同梱しているので簡単に着せかえが可能です。\nhttps://booth.pm/ja/items/1273588\n\n\nsynqark様のarktoonshaderを使用しています。\nhttps://booth.pm/ja/items/1027997\n\n\n■内容物\n半袖・長袖fbx 2種類ずつ（靴有りと無し）\nサンプルテクスチャ 4種類x2\n着せ替え解説画像\nPSDファイル\nblendファイル\n制服unitypackage（設定済み）\narktoon-shaders-1.0.2.4.unitypackage\nUnityWearChangeSupporter.unitypackage\nreadme.txt\n\n\n■利用規約\n・本モデルを購入した時点で本利用規約に同意したものとします。利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n・本データの改造は自由です。\n\n・本データ、改造データのVRChat等モデルデータをアップロードし、アバターとして使用するサービスへの使用を許可します。\n\n・本データ、改造データの再配布、販売を禁じます。\n※VRChatのペデスタルへの使用、アバターのpublic化は許可します。\n\n・商用、非商用どちらも利用可能です。\n※モデルデータとして再度利用できる状態のデータが含まれる場合は利用を禁止します。\n\n・R-18・R-18Gへの使用可能です。\n\n・政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\n・本データ、改造データを使用することによって生じた何らかのトラブル、損失に対し当方は一切責任を負わないものとします。\n\n\nTwitter:@yuiprpr\n\n\n\n","url":"https://booth.pm/ja/items/1382276","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"5000"},"image":"https://booth.pximg.net/c/620x620/38ce0a06-7e57-4eda-bc0c-fd783077e52c/i/1382276/9a362459-19a8-42b8-9126-432965a7b27a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NYYFIUJ0B3zuuVJHo2LqpAosvpLbXK5Q5CQ8fgcXMeo="></script>
+    nonce="1LXBrsUx/dlSolBZ+AaBZMRUNKf8W9wMrw3eqtYsbBY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -629,9 +629,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
