updated at: 2023-07-31 22:44, [VRchat想定]名前編集可能なペアリング(指輪/腕輪)[UnityPackage 付属] - Kanae&#39;s Garage - BOOTH

--- a/VRChat/71/1312571.html
+++ b/VRChat/71/1312571.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IjRtrWxWaM1W/MCNkKCbPIg/RJ9YmequAGJQ8W/hDZ4="></script>
+    "gsur4IoUzEvqOYOx7xCQPVdIQvHTpVmEWlHkHY3rmYM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat想定]名前編集可能なペアリング(指輪/腕輪)[UnityPackage 付属]","description":"VRChat内でかけがえのない人を見つけたとき、何か特別なものをあげたいと思ったことはないでしょうか？\nそんなあなたを少しでもお助けできれば……とペアルック可能な、自分たちだけのアクセサリをご用意しました。","url":"https://booth.pm/ja/items/1312571","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/a1a684d4-f6f7-445a-ae6e-becb249b10d5/i/1312571/bee3d61f-d474-4ce5-8cdb-4236c93ed6e1_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IjRtrWxWaM1W/MCNkKCbPIg/RJ9YmequAGJQ8W/hDZ4="></script>
+    nonce="gsur4IoUzEvqOYOx7xCQPVdIQvHTpVmEWlHkHY3rmYM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -557,9 +557,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
