updated at: 2023-07-31 22:47, ピックアップお片付けボタンprefab - 仮想製菓おやつはさんじ - BOOTH

--- a/VRChat/78/1310378.html
+++ b/VRChat/78/1310378.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "g51tiN5WHhbkMUhLNLE8erY79nodZ3PZkvYAV1h29TI="></script>
+    "3R+QWylb0oC4oTN5Hq05KGvxmcrSX+PAkyGDTKuJP3s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ピックアップお片付けボタンprefab ","description":"2021/08/13：Unity2019(SDK2)で動くことを確認\n2020/09/14：位置をリセットできない場合の補足を追記\n2020/04/21：Unity2018(VRCSDK2)で使えることを確認\n\nピックアップをつけたオブジェクトが遊んでいるうちにちらかっちゃって片付けるのが大変……\nそんなときにワールドに組み込むことで初期位置に戻す事ができるボタンのセットです\n\nVRCHATでのworld(SDK2)で使うことを想定しています\nワールド制作がちょっとでもわかる人向け\n\n改変や改変しての再配布等自由ですが\nひとに迷惑がかかる使い方はやめてね","url":"https://booth.pm/ja/items/1310378","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/0140b1d9-1e9d-4ac5-82b2-80cb66005de0/i/1310378/90428f5b-5703-41ea-949c-c4255e8fb448_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="g51tiN5WHhbkMUhLNLE8erY79nodZ3PZkvYAV1h29TI="></script>
+    nonce="3R+QWylb0oC4oTN5Hq05KGvxmcrSX+PAkyGDTKuJP3s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -489,9 +489,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
