updated at: 2023-07-31 22:47, ロボトミー社職員素体 - Mech - BOOTH

--- a/VRChat/89/1309389.html
+++ b/VRChat/89/1309389.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eFxviYQJ8jhhUzaRIYCuqa1w6UaZ9NUJdkT4FNZjK/c="></script>
+    "RghElCIflj16dVdlbut3kzVcnmQeWv8/60hYeTWUjmg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ロボトミー社職員素体","description":"”ロボトミー社職員素体”は、ロボトミーコーポレーションに登場するエージェントを模した二次創作3Dモデルです。\nそれは3552の三角ポリゴンをもち、2つのマテリアルから構成されています。\n\nユーザーはLobotomy Corporationの二次創作ガイド(　https://steamcommunity.com/games/568220/announcements/detail/3227268492817347386?l=japanese　)に反しない範囲で自由に3Dモデルを使用できます。","url":"https://booth.pm/ja/items/1309389","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fce813d5-8c96-498a-b62d-ca1be3385d08/i/1309389/53b973ef-476e-483f-8b30-10f651854ad6_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eFxviYQJ8jhhUzaRIYCuqa1w6UaZ9NUJdkT4FNZjK/c="></script>
+    nonce="RghElCIflj16dVdlbut3kzVcnmQeWv8/60hYeTWUjmg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      656
+                                      657
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -205,7 +205,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      656
+                                      657
                                     </div>
                                   </div></a>
                                 </div>
@@ -358,9 +358,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
