updated at: 2023-07-31 22:55, Auto Dresser - sentz-A生命維持機関 - BOOTH

--- a/VRChat/47/1300847.html
+++ b/VRChat/47/1300847.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VHmBh/1v6h8yntuYKGXW3L4XpuCBPzKhzjISrKrDlM8="></script>
+    "oBnCPFK1NRgBdtA03sS13F4jVSX59xwHiZF2aldTP1w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Auto Dresser","description":"◆お知らせ◆\n◆PhysBonesへの対応は無理そうです。（技術力の問題です！残念ながら！）\n◆PhysBonesを使用した衣装を使いたい場合は、対応している他作者様のツールをお使い下さい。（もしくは作者の技術力の向上にご期待下さい）\n\n特定のアバター専用として作られた服装モデルでの着せ替えを補助するUnity用Scriptです。\nUnity2019でも動作していると思います。（試した限りでは）\n\nUnity上で行う場合服側のボーンをアバター側に手動で全て移動させる必要がありますが、それらの操作を簡単な設定をするだけで全て自動化します。\nDynamicBoneも設定含め複製するので、余計な操作は（恐らく）必要ありません。\n\n\n・専用の服以外での着せ替え動作は保証していません。\n・ボーン名が部分（あるいは全て）一致する必要があります。専用として作られた服であれば恐らく問題ないはずです。\n・Unity上の簡単な操作で完結する事を目的にしています。（小難しい事はBlenderとかでやろうねの意）\n\n更新情報\nver0.45\nリリース版\nver0.451\nアバターのアップロードができないという致命的な凡ミスを修正\nver0.451a\nUnity2018では手間が増えていたのをスクリプト側でなんとかするように\nver0.451a1\nアバターのアップロードができないという致命的な凡ミスをまたやったのでまた修正\n\n\n付属品\n画像付きマニュアル（URL）\nunitypackage二種（片方はDynamicBone非所持向け）\nライセンスファイル（↓にあるやつ）\n\n\n・sentz-Aデータ利用規約（2018/08/26）\n本データを利用した場合、利用者は本規約に同意したものとみなされます。\n本データの利用により発生した損害、損失等について著作者は一切の責任を負わないものとします。\n1.著作者の特別の許可がない限り、不特定多数が現状のまま利用可能な状態での再配布を禁じます。","url":"https://booth.pm/ja/items/1300847","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/e187f0d4-84c9-40b6-8fed-dae784ce6815/i/1300847/25f5bb1b-5100-4600-b7d7-a4ce6e1a56b7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VHmBh/1v6h8yntuYKGXW3L4XpuCBPzKhzjISrKrDlM8="></script>
+    nonce="oBnCPFK1NRgBdtA03sS13F4jVSX59xwHiZF2aldTP1w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -392,9 +392,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
