updated at: 2023-07-31 22:56, 【悪役結社ヴァリアールファンアイテム】ヴァリアライズチョーカー - えいてる屋 - BOOTH

--- a/VRChat/22/1293822.html
+++ b/VRChat/22/1293822.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zMsSKJa+wYp4ovRIatv6D1SRNM47ciAEnI5qwHFbaB0="></script>
+    "htq0tD0bpNfl1UKBxfwbLygh5YycadlBSd3CyZN9fZc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【悪役結社ヴァリアールファンアイテム】ヴァリアライズチョーカー","description":"　バーチャル世界の悪の組織、『悪役結社ヴァリアール』のファン向け公式アイテムが遂に登場。\n\n　恐るべき結社を慕い崇める仮想市民諸君の有様を具象し、『発信機・自爆装置付きの首輪を自ら身に着ける』という形を取らせて貰ったぞ。\n\n　DynamicBoneで揺れるドッグタグに好きな文言を彫り込む方法の指南付きだ。これで貴様も『札付き』という訳だな。尚腕輪等として使っても構わない。\n\nこれを身に着け、より一層結社への忠誠を高めるが良い。\n\n\n\n\n◆VAREAL　LICENSED◆ \n本商品は『ヴァリアールライセンス』認可商品である。\n『ヴァリアールライセンス』とは、バーチャル世界の悪の組織、『悪役結社ヴァリアール』が公式に関連商品と認めたもののみに発行されるロゴマーク及びタグである。 『ヴァリアールライセンス』の詳細は下記URLを参照とする。\nhttps://vrheel.com/license/\n◆VAREAL　LICENSED◆\n\n\n\n\n◆利用規約◆\n本商品単体での再配布、及び本商品を含む３Dモデルの販売を禁ずる。\nアバターの一部、アクセサリーとしてのアップロード及び改変を許可する。\n本商品を含む改変アバターのVRchatにおけるペデスタル設置及びクローニングを許可する。（アバター本体の規約に従うこと）\n有償無償問わず動画配信への映り込みを許可する。クレジット不要。\n政治宗教に関わる利用及び『悪役結社ヴァリアール』の名誉を損ねる利用を禁ずる。\n本モデル使用に伴うトラブルについて当方は一切関知しない。\n\n\n\n使用マテリアル　PBT-Shader　（MITライセンス）\nhttps://yosohuta.booth.pm/items/1266870\n\n","url":"https://booth.pm/ja/items/1293822","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/75409dcf-e181-4290-a053-65156c11a7c3/i/1293822/5653fac4-fd8c-4380-8d61-4a413683a76c_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zMsSKJa+wYp4ovRIatv6D1SRNM47ciAEnI5qwHFbaB0="></script>
+    nonce="htq0tD0bpNfl1UKBxfwbLygh5YycadlBSd3CyZN9fZc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -512,9 +512,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
