updated at: 2023-07-31 22:58, 試験薬 01 - HAMELN - BOOTH

--- a/VRChat/07/1297907.html
+++ b/VRChat/07/1297907.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XfVqCea8bLImWYbYQAK68GA1eSuKuM+GQs3Rqux9eHg="></script>
+    "2lT+OSGtyNpQcAtxhcBIL1Wubs+UnBpaxGWzDimmZxI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"試験薬 01","description":"試験薬 01\n\n------------------------------------------\n内容\n・UnityPackage\n・SubstancePainterFile\n・Texture\n・BlenderFile\n・FBX\n\n「試験薬　01」の再配布、２次販売を禁じます。\n見つけた場合には製作者(@NonameReUnder)までDMをください。\n\n© Unity Technologies Japan/UCL\nこの商品はユニティちゃんライセンス条項の元に提供されています。\n\n以下　試験薬　実験内容\n\n------------------------------------------\n概要\n「■■病」の患者の■■のエネルギーを活用するため\n■■と■■を元に生成した試験薬\n\n使用者を約■％の確率で身体強化、再生回復できる効果がみこまれる。\n\n\n------------------------------------------\n\n検証内容\n「■■病」患者の体内で鉱石が結晶化しないことから\n「■■■」の組織液を触媒にし、結晶内エネルギーを取り出すことが可能か検証\n\n実験１　マウスによる検証　失敗\n投与から数秒で■■が\n実験体内から異常生成された。\n\n配合を調整する必要が有り。\n\n実験２　マウスによる検証　失敗\n投与から２４時間後\n■■が実験体内から異常生成された。\n■■を多く配合することで■■の生成時間が伸びた。\n\n実験■■■　■■による検証　成功\n一時的な身体強化　並びに身体組織の分裂活動が活発化した。\n\n■■■■■■■■■■■■■、■■■■■■■■■■■■\n■■■死■■■■。","url":"https://booth.pm/ja/items/1297907","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b0b57a4e-1e28-42b1-8e5c-063bdb3d8416/i/1297907/9a46ed05-1e46-48e6-b822-804f5bddb5bb_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XfVqCea8bLImWYbYQAK68GA1eSuKuM+GQs3Rqux9eHg="></script>
+    nonce="2lT+OSGtyNpQcAtxhcBIL1Wubs+UnBpaxGWzDimmZxI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -504,9 +504,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
