updated at: 2023-07-31 22:59, 【VRchat・VRM環境対応モデル】GHOSTChloe（ゴーストクロエ） - 春日部つくしSHOP - BOOTH

--- a/VRChat/19/1289519.html
+++ b/VRChat/19/1289519.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/DB/xNb2SM0rhLTxZUmVJGIRkp+ZlyoTfVjc9/R+clg="></script>
+    "E67kqfNR8tWyxDLUo0QSAZ/gbauRsqah4RodVLfzQmw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat・VRM環境対応モデル】GHOSTChloe（ゴーストクロエ）","description":"GHOSTChloe\n制作:春日部つくし\n\n----------\n\n！2021/04/21　大幅更新いたしました!!\n更新まで長期間があき申し訳ありませんでした。\n長らくの愛用誠にありがとうございます。\n\n・ポリゴンのブラッシュアップ\n・メッシュの統合\n・フェイシャルの追加\n・カラーバリエーションテクスチャの追加\n※セットアップは2.0で行っております。\n※最新版のVRCSDK2、DynamicBone、ユニティちゃんトゥーンシェーダーをあらかじめインポートしてください。\n\n----------\n\n3/31 20:00からの限定5体販売となります。\n\n※booth仕様上、ダウンロード販売は販売個数制限が出来ないため自宅発送と記載されています。\n実際は購入後、おまけファイル(購入特典ファイル)よりモデルをDLください。\n\n【モデル詳細】\n\n・（！重要！）メッシュ数が26個、未統合状態です。\n　後日統合版をアップデートさせていただきますが、任意で顔、瞳、ハイライト以外を統合いただくとVRCで快適に使用できます。\n大変申し訳ございませんがお待ちください。（統合版は4月第一週中にアップロード予定です。）\n・Humanoid Rig対応\n・フルトラッキング対応\n・△：29088\n・マテリアル数：6\n・テクスチャ：2\n・シェイプキー：6種＋リップシンク\n・リップシンク対応\n・Dynamic Bone設定済\n・Cubedシェーダー、Unity-Chan toon shader2.0.5設定済\n・VRMモデル同梱\n\n\n【利用規約】\n\n・モデルをご利用時点で利用規約に同意したものとします\n・商用、非商用問わず利用することができます\n・モデルは自由に改変する事ができます\n・二次創作、動画などへの映り込みに対して制作者のクレジット表記の必要はありません\n・一部の場合を除きモデルの再配布、転載、不特定の人物がモデルを利用できるようにすることは禁止します\n・モデル使用によるいかなる損害にも制作者は一切責任を負いません\n\n\n\n\n春日部つくしyoutubeチャンネル\nhttps://www.youtube.com/channel/UCHccxX2p_9DB_HPnXSb2omw","url":"https://booth.pm/ja/items/1289519","offers":{"priceCurrency":"JPY","@type":"Offer","price":"32000"},"image":"https://booth.pximg.net/c/620x620/d2b98c74-a808-4bcb-8d1d-5c4631b22910/i/1289519/98c75323-799a-48c7-9134-6adb35bb79b4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/DB/xNb2SM0rhLTxZUmVJGIRkp+ZlyoTfVjc9/R+clg="></script>
+    nonce="E67kqfNR8tWyxDLUo0QSAZ/gbauRsqah4RodVLfzQmw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -413,9 +413,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
