updated at: 2023-07-31 23:01, [VRchat想定]AEDユニット Ver.2 [Unity Package] - Kanae&#39;s Garage - BOOTH

--- a/VRChat/28/1294128.html
+++ b/VRChat/28/1294128.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Zq7+gLWRW7SY9nFAzKnCA9FaNwjjGzn3O6cCeUWcLmI="></script>
+    "L40Q7t5F4M94teuB1+FlJW+9maY7Zc/slJEjzPZJfSI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat想定]AEDユニット Ver.2 [Unity Package]","description":"2019/04/03\nデータを更新し、質感を向上させました。\nお手数ですが再ダウンロードの程お願い致します。\n\n------------------------------------------------\n\n大丈夫か!?　今助けるぞ!!\n\nVRChatでの使用を想定したAEDのFBXモデルです。\nUnity Package同封。\nマテリアル設定済なので、サイズ変更等を行いすぐにご使用いただけます。\nまた、グループ化を解除することで左右を独立させることがきるため、両手で扱い、某FPSのような遊びを行うことができます。また、ちょっとした鈍器としてもご使用いただけます。\n\n\nみんなこれを担いで衛生兵になろう！　そしてAFKや寝落ちしたフレンドにもう一度立ち上がるチャンスをッ!!","url":"https://booth.pm/ja/items/1294128","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a1a684d4-f6f7-445a-ae6e-becb249b10d5/i/1294128/144f7ef8-6068-4932-bc65-3ec154743bf0_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Zq7+gLWRW7SY9nFAzKnCA9FaNwjjGzn3O6cCeUWcLmI="></script>
+    nonce="L40Q7t5F4M94teuB1+FlJW+9maY7Zc/slJEjzPZJfSI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -541,9 +541,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
